CHATS_SIT/force-app/main/default/objects/IPV_Information__c.object
<CustomObject>
    <fields>
        <fullName>Allegation_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Allegation Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allegation_Received_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Allegation Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Allegation_Result_Determination_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Allegation Result Determination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Allegation_Result__c</fullName>
        <label>Allegation Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Initial Review</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>No further action</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allegation_Status_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Allegation Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Allegation_Status__c</fullName>
        <label>Allegation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Received</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Completed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>County</label>
        <referenceTo>T_COUNTY__c</referenceTo>
        <relationshipLabel>IPV Informations</relationshipLabel>
        <relationshipName>IPV_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disqualification_Begin_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Disqualification Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disqualification_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disqualification Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disqualification_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Disqualification End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disqualification_Result__c</fullName>
        <label>Disqualification Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Signed IPV Waiver</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Administrative Hearing</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>County Level Hearing</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Fraud Conviction</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disqualification_determination_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Disqualification Determination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Individual_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client ID</label>
        <referenceTo>T_SBSD_INDIV__c</referenceTo>
        <relationshipLabel>IPV Information</relationshipLabel>
        <relationshipName>IPV_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Investigation_Begin_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Investigation Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Investigation_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Investigation Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Investigation_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Investigation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Investigation_Result_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Investigation Result Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Investigation_Result_Status__c</fullName>
        <label>Investigation Result Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Supervisory review</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Pursue fraud/IPV</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>No further action</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>District Court Conviction</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investigation_Status_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Investigation Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Investigation_Status__c</fullName>
        <label>Investigation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Received</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>CCCAP review</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>In progress</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Completed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investigatory_Finding__c</fullName>
        <label>Investigatory Finding</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Client Failed to report HH comp</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Client Failed to report HH comp and inc</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Client Failed to report HH comp at app</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Client Failed to report residency at ap</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Client falsely reported expenses</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Client falsely reported income</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Individual_ID__r.NAM_FIRST__c +&apos; &apos;+ Individual_ID__r.NAM_LAST__c</formula>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_CCCAP_Reviews__c</fullName>
        <label>Number of CCCAP Reviews</label>
        <summaryFilterItems>
            <field>CCCAP_Review__c.CCCAP_Review_Result__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>CCCAP_Review__c.IPV_Information__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_occurrences__c</fullName>
        <label>Number of occurrences</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reversal_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reversal Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reversal_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reversal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reversal_Reason__c</fullName>
        <label>Reversal Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>ALJ decision</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Disqualification entered in error</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>State review</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>IPV Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>IPV Record Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IPV Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AllegationReceivedDateNotFuture</fullName>
        <active>true</active>
        <errorConditionFormula>Allegation_Received_Date__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Allegation_Received_Date__c</errorDisplayField>
        <errorMessage>Date cannot be in the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AllegationResultDeterDateGreaterReceived</fullName>
        <active>true</active>
        <errorConditionFormula>Allegation_Result_Determination_Date__c &lt;  Allegation_Received_Date__c</errorConditionFormula>
        <errorDisplayField>Allegation_Result_Determination_Date__c</errorDisplayField>
        <errorMessage>Allegation Result Date cannot be before Allegation Received Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AllegationResultDeterDateNotFuture</fullName>
        <active>true</active>
        <errorConditionFormula>Allegation_Result_Determination_Date__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Allegation_Result_Determination_Date__c</errorDisplayField>
        <errorMessage>Date cannot be in the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AllegationStatusDateNotFuture</fullName>
        <active>true</active>
        <errorConditionFormula>Allegation_Status_Date__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Allegation_Status_Date__c</errorDisplayField>
        <errorMessage>Date cannot be in the future</errorMessage>
    </validationRules>
</CustomObject>