CHATS_SIT/force-app/main/default/objects/IPV_Information__c/validationRules/AllegationResultDeterDateGreaterReceived.validationRule-meta.xml
<ValidationRule>
    <fullName>AllegationResultDeterDateGreaterReceived</fullName>
    <active>true</active>
    <errorConditionFormula>Allegation_Result_Determination_Date__c &lt;  Allegation_Received_Date__c</errorConditionFormula>
    <errorDisplayField>Allegation_Result_Determination_Date__c</errorDisplayField>
    <errorMessage>Allegation Result Date cannot be before Allegation Received Date</errorMessage>
</ValidationRule>