CHATS_SIT/force-app/main/default/objects/IPV_Information__c/validationRules/AllegationStatusDateNotFuture.validationRule-meta.xml
<ValidationRule>
    <fullName>AllegationStatusDateNotFuture</fullName>
    <active>true</active>
    <errorConditionFormula>Allegation_Status_Date__c &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Allegation_Status_Date__c</errorDisplayField>
    <errorMessage>Date cannot be in the future</errorMessage>
</ValidationRule>